--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Project name",
-    "docData": "",
-    "path": "2019/10/test"
+  "title": "Project name",
+  "docData": "",
+  "path": "2020/05/EastGermanyCoal"
 }
